gcc/testsuite/gdc.test/compilable/test23306.d
class A {
        @disable new();
}

void main() {
        scope A a = new A();
}
