gcc/testsuite/gdc.test/fail_compilation/ice11982.d
void main() { new scope ( funk ) function }
